Changes in 1.8 (??.??.2011)

 - Colladawriter now exports materials per node when those are used in Irrlicht
 
 - Colladawriter now writing matrices for node transformations as old solution did not work with CDummyTransformationSceneNode's.
 
 - Colladawriter no longer create an extra node for the scenemanger as <visual_scene> has that job in Collada.
 
 - Colladwriter no longer makes all Scenenodes children of ambient-light as that can be parallel on the same layer instead.
 
 - Colladareader now creates the ambient-light correct instead of creating a point-light for it.

 - Add IAnimatedMeshSceneNode::getLoopMode (asked for by JLouisB)

 - CSceneNodeAnimatorCameraFPS now resets the key-input when it was disabled (thx @ gerdb for reporting and patch-proposal)

 - Properly destroy OpenGL resources on linux (thx @curaga for the patch)

 - Fix diplay bux in the attribute-panel of the GUIEditor. Fixes bug 3517314 (thx @Darkcoder  for reporting).

 - Allow caching cursor position on X11 to work around slow XQueryPointer calls (thx @Hendu for reporting+patch proposal)

 - Struct packing works now with gcc 4.7 changes on MinGW (thx @Sudi for reporting).

 - Struct packing uses now same solution throughout (by including headers in corresponding places)

 - User can now set characters used for decimal point in fast_atof for localisation.

 - Add parameter useAlphaChannel to second IGUIEnvironment::addImage function.

 - Fix vsync on X11

 - Fix MRT disabling. Bug found and fixed by hendu.

 - core:::array::reallocate returning now immediately when it has nothing to do. Should reduce a lot of memory thrashing on irrArrays.

 - Start mesh animations at first OnAnimate , before start-frame was rather random.  Thx @Auria for reporting and patch proposal.

 - renderTargetTexture now working with ECF_R5G6B5

 - add -fPic in c::b linux fast math shared build.

 - triangle3d::isPointInsideFast now using some epsilon to catch all points on the borders.
